--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,21 @@
 @import url("https://fonts.googleapis.com/css?family=Quicksand:400,500,700");
 html,
 body {
-  max-width: 99.99% !important;
-  margin: 0;
-  padding: 0;
+  max-width: 100vw;
+
   box-sizing: border-box;
   font-family: "Quicksand", sans-serif;
-  font-size: 62.5%;
-  font-size: 10px;
-}
 
+  font-size: 1.5vh;
+}
 .row {
-  max-width: 100vw;
+  max-width: 99.8vw;
 }
 .nav {
   width: 100%;
   height: 65px;
   position: fixed;
   line-height: 65px;
-  text-align: center;
 }
 
 .nav div.logo {
@@ -38,14 +35,21 @@ body {
   color: #00e676;
 }
 
+.btn {
+  background-color: #00e676;
+}
+.btn:hover {
+  background-color: black;
+  letter-spacing: 0.05em;
+}
 .nav div.main_list {
-  height: 65px;
+  height: 45px;
   float: right;
 }
 
 .nav div.main_list ul {
   width: 100%;
-  height: 65px;
+  height: 45px;
   display: flex;
   list-style: none;
   margin: 0;
@@ -56,14 +60,14 @@ body {
   width: auto;
   height: 65px;
   padding: 0;
-  padding-right: 3rem;
+  padding-right: 2rem;
 }
 
 .nav div.main_list ul li a {
   text-decoration: none;
   color: #fff;
   line-height: 65px;
-  font-size: 2.4rem;
+  font-size: 2rem;
 }
 
 .nav div.main_list ul li a:hover {
@@ -72,7 +76,7 @@ body {
 
 .home {
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   background-image: url("../images/960x0.jpg");
   background-position: center top;
   background-size: cover;
@@ -389,6 +393,13 @@ body {
   width: 100px;
 }
 
+.skill-logo:hover {
+  border-color: #00e676 5px;
+  transform: scale(1.3);
+  transition: transform 1.2s linear;
+  transform: rotate(360deg);
+}
+
 .card {
   width: 20vw;
   margin: 0.5vw;
@@ -468,5 +479,46 @@ body {
   color: #2c2c2c;
   font-size: 150px;
   letter-spacing: 0.05em;
-  text-shadow: 4px 4px 0px #d5d5d5, 7px 7px 0px rgba(0, 0, 0, 0.2);
+  text-shadow: 4px 4px 0px #d5d5d5, 7px 7px 0px #00e676;
+}
+
+#return-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.7);
+  width: 50px;
+  height: 50px;
+  display: block;
+  text-decoration: none;
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  border-radius: 35px;
+  display: none;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+#return-to-top i {
+  color: #fff;
+  margin: 0;
+  position: relative;
+  left: 16px;
+  top: 13px;
+  font-size: 19px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+#return-to-top:hover {
+  background: rgba(0, 0, 0, 0.9);
+}
+#return-to-top:hover i {
+  color: #fff;
+  top: 5px;
 }
